force-app/main/default/objects/AM_Vehicle_Repairs__c/AM_Vehicle_Repairs__c.object-meta.xml
<CustomObject>
    <label>AM Vehicle Repairs</label>
    <nameField>
        <displayFormat>AM{00000}</displayFormat>
        <label>AM Vehicle Repairs ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Vehicle Repairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>