force-app/main/default/objects/AM_Vehicle_Repairs__c/fields/AM_Estimated_Repair_Amount__c.field-meta.xml
<CustomField>
    <fullName>AM_Estimated_Repair_Amount__c</fullName>
    <label>AM Estimated Repair Amount</label>
    <summarizedField>AM_Vehicle_Repair_Details__c.AM_Estimated_Repair_Detail_Amount__c</summarizedField>
    <summaryForeignKey>AM_Vehicle_Repair_Details__c.AM_Vehicle_Repairs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>