force-app/main/default/objects/AM_Vehicle_Repairs__c/fields/AM_Repair_Status__c.field-meta.xml
<CustomField>
    <fullName>AM_Repair_Status__c</fullName>
    <label>AM Repair Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progress</fullName>
                <default>true</default>
                <label>Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>