force-app/main/default/objects/AM_Vehicle_Repairs__c/fields/AM_Repair_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>AM_Repair_Total_Amount__c</fullName>
    <formula>AM_Actual_Repair_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Repair Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>