force-app/main/default/objects/AM_Vehicle_Repairs__c/fields/AM_Vehicle_Make_Year__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Make_Year__c</fullName>
    <formula>TEXT( AM_Vehicle_Number__r.AM_Make_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Make Year</label>
    <type>Text</type>
</CustomField>