force-app/main/default/objects/AM_Vehicle_Repairs__c/fields/AM_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Model__c</fullName>
    <formula>TEXT(AM_Vehicle_Number__r.AM_Vehicle_Model__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Model</label>
    <type>Text</type>
</CustomField>