force-app/main/default/objects/AM_Vehicle_Repairs__c/fields/AM_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Vehicle Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>AM Vehicle Repairs</relationshipLabel>
    <relationshipName>AM_Car_Repairs</relationshipName>
    <type>Lookup</type>
</CustomField>